force-app/main/default/objects/Contact/fields/Report_Retrieval_Count__c.field-meta.xml
<CustomField>
    <fullName>Report_Retrieval_Count__c</fullName>
    <label>Report Retrieval Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>