force-app/main/default/objects/Contact/fields/SLA_Status__c.field-meta.xml
<CustomField>
    <fullName>SLA_Status__c</fullName>
    <label>SLA Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Within SLA</fullName>
            </value>
            <value>
                <fullName>Near Due</fullName>
            </value>
            <value>
                <fullName>Overdue</fullName>
            </value>
            <value>
                <fullName>Breached</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>