force-app/main/default/objects/Contact/fields/Upload_Status__c.field-meta.xml
<CustomField>
    <fullName>Upload_Status__c</fullName>
    <label>Upload Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Uploaded</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>