force-app/main/default/objects/Contact/fields/Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Verification_Status__c</fullName>
    <label>Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Matched</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Manual Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>