force-app/main/default/objects/Contact/fields/Withdrawal_Confirmation_Status__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_Confirmation_Status__c</fullName>
    <label>Withdrawal Confirmation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Sent</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>