force-app/main/default/objects/Contact/fields/Withdrawal_Date__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Withdrawal Date</label>
    <type>DateTime</type>
</CustomField>