force-app/main/default/objects/Contact/fields/Withdrawal_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Withdrawal Date Time</label>
    <type>DateTime</type>
</CustomField>