force-app/main/default/objects/Contact/fields/Withdrawal_Source__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_Source__c</fullName>
    <label>Withdrawal Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Subject</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>