force-app/main/default/objects/Contact/fields/Withdrawal_Status__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_Status__c</fullName>
    <label>Withdrawal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Review Required</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Withdrawn / Completed</fullName>
            </value>
            <value>
                <fullName>Exceptions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>