force-app/main/default/objects/Contact/recordTypes/Data_Subject.recordType-meta.xml
<RecordType>
    <fullName>Data_Subject</fullName>
    <active>true</active>
    <label>Data Subject</label>
</RecordType>