force-app/main/default/objects/Contact/recordTypes/Non_Singpass.recordType-meta.xml
<RecordType>
    <fullName>Non_Singpass</fullName>
    <active>true</active>
    <description>Data subjects authenticated via Non-Singpass methods (Passport/Other).</description>
    <label>Non-Singpass</label>
</RecordType>