force-app/main/default/objects/Contact/recordTypes/Singpass.recordType-meta.xml
<RecordType>
    <fullName>Singpass</fullName>
    <active>true</active>
    <description>Data subjects authenticated via Singpass (NRIC/FIN).</description>
    <label>Singpass</label>
</RecordType>