force-app/main/default/objects/Contact/validationRules/CBS_DS_Required_Identity_By_Stage.validationRule-meta.xml
<ValidationRule>
    <fullName>CBS_DS_Required_Identity_By_Stage</fullName>
    <active>true</active>
    <description>Requires Data Subject identity fields only during active processing stages.</description>
    <errorConditionFormula>AND(
    $RecordType.DeveloperName = &quot;Data_Subject&quot;,
    OR(
        ISPICKVAL(Data_Subject_Lifecycle_Stage__c, &quot;Upload&quot;),
        ISPICKVAL(Data_Subject_Lifecycle_Stage__c, &quot;Consent Request&quot;),
        ISPICKVAL(Data_Subject_Lifecycle_Stage__c, &quot;Active Consent&quot;),
        ISPICKVAL(Data_Subject_Lifecycle_Stage__c, &quot;Processing&quot;),
        ISPICKVAL(Data_Subject_Lifecycle_Stage__c, &quot;Report Request&quot;),
        ISPICKVAL(Data_Subject_Lifecycle_Stage__c, &quot;Report Fulfilment&quot;),
        ISPICKVAL(Data_Subject_Lifecycle_Stage__c, &quot;Departure&quot;)
    ),
    OR(
        ISBLANK(AccountId),
        ISBLANK(Full_Name__c),
        ISBLANK(Email),
        ISBLANK(TEXT(ID_Type__c)),
        ISBLANK(ID_Number__c),
        ISBLANK(Date_of_Birth__c),
        ISBLANK(TEXT(Employment_Status__c))
    )
)</errorConditionFormula>
    <errorMessage>Complete the required Data Subject identity fields before continuing this active processing stage.</errorMessage>
</ValidationRule>