force-app/main/default/objects/Contact/listViews/MyContacts.listView-meta.xml
<ListView>
    <fullName>MyContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>ID_Type__c</columns>
    <columns>ID_Number__c</columns>
    <columns>Date_of_Birth__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>My Contacts</label>
</ListView>